# bot-jury

./: .gitignore  README.md  app.py  config.yaml  install.sh  pyproject.toml  requirements.txt
council/: __init__.py  cli.py  config.py  default_config.yaml  models.py  ollama_client.py  orchestrator.py  prompts.py  storage.py  utils.py  voting.py
tests/: test_app.py  test_cli.py  test_config.py  test_ollama_client.py  test_orchestrator.py  test_parsing.py  test_voting.py
